# wipeout-rewrite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
network/: CMakeLists.txt  addr_conversions.c  msg.c  msg.h  name_gen.c  name_gen.h  network.c  network.h  network_types.h  network_wrapper.c  network_wrapper.h  protocol.h
protos/: ClientList.proto  ServerInfo.proto
server/: CMakeLists.txt  client.c  client.h  main.c  network.c
server/serverlib/: CMakeLists.txt  client.c  client.h  client_com.c  client_com.h
src/: input.c  input.h  mem.c  platform_sdl.c  render.h  render_gl.c  render_null.c  render_software.c  system.c  types.c  types.h  utils.h
src/wipeout/: camera.c  camera.h  client.c  droid.c  game.c  game.h  hud.c  image.c  ingame_menus.c  main_menu.c  menu.c  menu.h  object.c  object.h  particle.c  particle.h  race.c  race.h  scene.c  server_com.c  server_com.h  sfx.c  ship.c  ship.h  ship_ai.c  ship_player.c  track.c  track.h  weapon.c  weapon.h
tests/: CMakeLists.txt  main.c  mocks.h  network_wrapper.c  test_name_gen.c  test_network.c  test_server.c  utils.c  utils.h
